Arreglo, saque (UCUDAL)
by Giovanni

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   name             : "Equipo 1 (Benvenuto - Caamaño - Cicao - Echagüe - Iglesias)"
   avatar           : "profile.png"
   bio              : "Somos un equipo dinámico y competente con habilidades y conocimientos aplicados a los métodos de aprendizaje automático"
-  location         : "Universidad Católica del Uruguay (UCUDAL)"
+  location         : "Universidad Católica del Uruguay"
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
   email            :
