--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,8 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Proyectos"
+    url: /proyectos/ 
 
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Sobre Nosotros"
+    url: /sobre-nosotros/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
