--- a/_config.yml
+++ b/_config.yml
@@ -181,6 +181,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  proyectos:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
@@ -238,6 +241,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _proyectos
+  - scope:
+      path: ""
+      type: proyectos
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
 
 # Sass/SCSS
 sass:
